<resources>
    <string name="app_name">Cats R Us</string>
    <string name="search">Search</string>
    <string name="favourites">My Favourites</string>
    <string name="api_key">650dd1c2-4a29-4ff2-91b1-a58b6b33c325</string>
    <string name="cat_breed">Arabian Mau</string>
  <string name="cat_description"> The Arabian Mau is a formal breed of domestic cat, originated from the desert cat, a short-haired landrace native to the desert of the Arabian Peninsula. It lives in the streets and deserts of the Arabian Peninsula and has adapted very well to its extreme climate.</string>
    <string name="description_title">Description</string>
    <string name="cat_temperament">Playful, Fun, Energetic</string>
      <string name="origin">Origin</string>
    <string name="cat_facts">Cat Facts</string>
    <string name="cat_weight">Weight</string>
    <string name="cat_lifespan">Life Span</string>
    <string name="wikilink">Wikipedia Link</string>
    <string name="friendliness">Friendliness Level</string>
    <string name="favourite_cat">Arabian Mau</string>
</resources>